--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -109,6 +109,7 @@
 </div>
 <div class="disclaimer"><em>Disclaimer:</em> This is not an official website for booking vaccination appointment. This website is not intended for commercial use. You can only view current availability of slots here. To register and book vaccination slots kindly visit CoWin
     website.
+    <br /><br /> For any feedback please email us at - <a href="mailto:feedback.vaccineslots@gmail.com">feedback.vaccineslots@gmail.com</a>
 </div>
 <div class="fixed">
     <a href="https://selfregistration.cowin.gov.in/" target="_blank">Book From Cowin</a>
